# Complete-Codebase-Review

./: .coverage  .coveragerc  .gitignore  .gitmessage  .skills-index.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  ccr-baseline.json  help.md  help.txt  install.ps1  install.py  install.sh  karpathy-guidelines.md  orchestrator-rules.md  pyproject.toml  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ADRs/: ADR-001-14-agent-parallel-split.md  ADR-002-devils-advocate-workflow.md  ADR-003-plain-python-test-framework.md  ADR-004-five-phase-pipeline.md
docs/: README.md
docs/api/: install.md
helpers/: github-commands.md  sanitization.md
skills/review/: SKILL.md
tests/: BASELINE-EXPECTATIONS.md  Test-Windows.ps1  __init__.py  expected_issues.json  run-compliance-tests.ps1  run-integration-tests.ps1  test_compliance.py  test_end_to_end.py  test_env_config.py  test_install.py  test_pipeline.py  test_review_compliance.py  test_smoke.py
tests/dummy_repo/: app.py
