[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "complete-codebase-review"
version = "2.0.0"
description = "Holistic, read-only codebase audit for Claude Code / AI coding agents"
requires-python = ">=3.7"
license = {text = "MIT"}
