[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "complete-codebase-review"
version = "2.0.2"
description = "Holistic, read-only codebase audit for Claude Code / AI coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[[project.authors]]
name = "Gaurav"
email = ""

[project.urls]
Homepage = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review"
Repository = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review"
"Bug Tracker" = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review/issues"
