[project]
name = "complete-codebase-review"
version = "2.3.0"
description = "Holistic, read-only codebase audit for Claude Code / AI coding agents"
dependencies = []
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
]

[[project.authors]]
name = "Gaurav"

[project.urls]
Homepage = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review"
Repository = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review"
"Bug Tracker" = "https://github.com/artgaurav16420-oss/Complete-Codebase-Review/issues"
